fixes display problems on mobile (maybe)

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -258,4 +258,8 @@ main {
             text-align: center;
         }
     }
+
+    footer {
+        font-weight: 400;
+    }
 }
